fix: subsession breaks at 900px breakpoint

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -70,6 +70,9 @@ li {
 
 .l-wrapper {
 	min-width: 100vw;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .l-wrapper__content {
@@ -109,7 +112,7 @@ li {
 	background-color: var(--color-white);
 	height: 100%;
 	align-items: center;
-	padding: 24px;
+	padding: 24px 0;
 }
 
 .c-header__content__right {
@@ -120,7 +123,6 @@ li {
 	justify-content: flex-end;
 	flex-wrap: wrap;
 	gap: 64px;
-	padding: 0 24px;
 }
 
 .c-header__content__menu-icon {
@@ -367,6 +369,11 @@ button.c-button--primary {
 	background-color: var(--color-blue-400);
 }
 
+button.c-button--secondary {
+	border: 3px solid var(--color-orange-300);
+	background-color: var(--color-orange-300) !important;
+}
+
 button.c-button--primary img {
 	margin-left: 0.5rem;
 }
@@ -406,34 +413,48 @@ button.c-button:active::before {
 	position: relative;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
 }
 
-.l-hero__container::before {
+.l-hero__container__bg {
+	position: absolute;
+	overflow: hidden;
+	width: 100vw;
+	height: 100vh;
+	z-index: -1;
+}
+
+.l-hero__container__bg::before {
 	content: "";
 	position: absolute;
-	width: 2500px;
+	width: 4000px;
 	height: 2000px;
 	right: -800px;
-	z-index: -1;
 	transform: skew(58deg);
 	background-color: var(--color-gray-100);
 }
 
 .c-hero__content {
+	position: relative;
 	height: 100%;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	padding: 0 108px;
 }
 
 .c-hero__content__texts {
 	display: flex;
 	flex-direction: column;
-	max-width: 450px;
 	margin-top: 120px;
 	margin-bottom: 288px;
+
+	padding-right: 16px;
 }
 
 .c-hero__content__texts h1 {
 	margin-bottom: 40px;
+	max-width: 450px;
 }
 
 .c-hero__content__texts span {
@@ -442,22 +463,124 @@ button.c-button:active::before {
 
 .c-hero__content__texts p {
 	line-height: 150%;
+	max-width: 450px;
+}
+
+.c-hero__content__form {
+	max-width: 450px;
+	width: 100%;
+	background-color: var(--color-white);
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	margin-top: 40px;
+	padding: 32px;
+}
+
+div.c-hero__content__form form fieldset {
+	width: 100%;
+	border: none;
+}
+
+.c-form__content__header {
+	text-align: center;
+	border-bottom: 2px solid var(--color-gray-300);
+	padding-bottom: 16px;
+	margin-bottom: 24px;
+}
+
+.c-form__content__header h3 {
+	margin-bottom: 16px;
+}
+
+form .c-form__content {
+	width: 100%;
+}
+
+.c-form__content fieldset {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 16px;
+}
+
+.c-form__content fieldset label {
+	font-weight: bold;
+	font-size: 16px;
+	margin-bottom: 8px;
+}
+
+.c-form__content fieldset input,
+.c-form__content fieldset select {
+	height: 40px;
+	padding: 12px;
+	border: 2px solid var(--color-black);
+}
+
+.c-form__content fieldset input::placeholder {
+	font-size: 12px;
+	color: var(--color-gray-500);
+}
+
+.c-form__content fieldset select {
+	width: 100%;
+	padding-bottom: 12px;
+	display: flex;
+	height: 100%;
+	align-items: center;
+	color: var(--color-gray-500);
+	font-size: 12px;
+}
+
+.c-form__content fieldset select::selection {
+	color: var(--color-black);
+}
+
+.c-form__content fieldset select:focus {
+	color: var(--color-black);
+	font-size: 14px;
+}
+
+.c-form__content footer ul li {
+	font-size: 12px;
+	color: var(--color-gray-500);
+	margin-bottom: 8px;
+	list-style: disc;
+	margin-left: 14px;
+}
+
+.c-form__content footer ul li a {
+	text-decoration: underline;
+	color: var(--color-blue-400);
+}
+
+.c-form__content footer ul li a:hover {
+	color: var(--color-orange-500);
+}
+
+.c-form__content footer ul {
+	margin: 24px 0;
+}
+
+.c-form__content footer button {
+	width: 100%;
 }
 
 .l-hero__subsession-container {
 	background-color: var(--color-blue-800);
+	margin-top: -450px;
 }
 
 .c-hero__subsession {
-	padding: 0 108px;
+	padding: 24px;
 	min-height: 330px;
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
+	padding: 0 108px;
 }
 
 .c-hero__subsession__texts {
 	max-width: 450px;
 	color: var(--color-white);
+	padding-right: 16px;
 }
 
 .c-hero__subsession__texts h2 {
@@ -472,8 +595,14 @@ button.c-button:active::before {
 	margin-top: 24px;
 }
 
+div.c-hero__subsession__form-space {
+	min-width: 516px;
+	height: 300px;
+	background-color: var(--color-blue-800);
+}
+
 @media screen and (max-width: 1200px) {
-	.l-hero__container::before {
+	.l-hero__container__bg::before {
 		content: "";
 		position: absolute;
 		width: 2500px;
@@ -483,10 +612,41 @@ button.c-button:active::before {
 		transform: skew(42deg);
 		background-color: var(--color-gray-100);
 	}
+
+	.c-hero__content__texts {
+		margin-bottom: 0;
+	}
+	.c-hero__subsession {
+		padding: 0 24px;
+	}
+
+	div.c-hero__subsession__form-space {
+		display: none;
+	}
+
+	.l-hero__subsession-container {
+		margin-top: 0;
+		padding: 48px 0;
+	}
+}
+
+@media screen and (max-width: 900px) {
+	.c-hero__content {
+		flex-direction: column;
+		padding: 24px;
+	}
+
+	.c-hero__content__texts {
+		display: flex;
+		flex-direction: column;
+		margin-top: 40px;
+		margin-bottom: 0;
+		padding-right: 16px;
+	}
 }
 
 @media screen and (max-width: 599px) {
-	.l-hero__container::before {
+	.l-hero__container__bg::before {
 		content: "";
 		position: absolute;
 		width: 2500px;
@@ -495,6 +655,10 @@ button.c-button:active::before {
 		z-index: -1;
 		transform: skew(42deg);
 		background-color: var(--color-gray-100);
+	}
+
+	.c-hero__content__form {
+		align-self: center;
 	}
 }
 
